test/conformance/kuttl/verify-manifests/multi-signatures/02-resources.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: resource-no-signature.yaml
  shouldFail: true
- file: resource-one-signature.yaml
  shouldFail: true
- file: resource-two-signatures.yaml
  shouldFail: false
