test/conformance/kuttl/verify-manifests/multi-signatures/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-yaml
spec:
  validationFailureAction: enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail  
  rules:
    - name: validate-yaml
      match:
        any:
        - resources:
            kinds:
            - Service
      validate:
        manifests:
          attestors:
          - entries:
            - keys:
                publicKeys: |-
                    -----BEGIN PUBLIC KEY-----
                    MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEyQfmL5YwHbn9xrrgG3vgbU0KJxMY
[...]
                    -----END PUBLIC KEY-----
            - keys:
                publicKeys: |-
                    -----BEGIN PUBLIC KEY-----
                    MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEE8uGVnyDWPPlB7M5KOHRzxzPHtAy
[...]
                    -----END PUBLIC KEY-----
